--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:7071/api';
+        const API_BASE = 'https://st-10.azurewebsites.net/api';
         let currentAuthToken = '';
 
         function login(role) {
