--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <div class="grid-4">
                             <input type="text" id="numberAndStreet" placeholder="Street" required style="grid-column: span 2;">
                             <input type="text" id="city" placeholder="City" required>
-                            <input type="text" id="state" placeholder="State" required maxlength="2">
+                            <input type="text" id="state" placeholder="State" required>
                             <input type="text" id="zipCode" placeholder="Zip" required style="grid-column: span 4;">
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                         <div class="grid-4">
                             <input type="text" id="dStreet" placeholder="Street" required style="grid-column: span 2;">
                             <input type="text" id="dCity" placeholder="City" required>
-                            <input type="text" id="dState" placeholder="State" required maxlength="2">
+                            <input type="text" id="dState" placeholder="State" required>
                             <input type="text" id="dZip" placeholder="Zip" required style="grid-column: span 4;">
                         </div>
                     </div>
