--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                         <div class="grid-4">
                             <input type="text" id="street" placeholder="Street Address" required style="grid-column: span 2;">
                             <input type="text" id="city" placeholder="City" required>
-                            <input type="text" id="state" placeholder="State" required maxlength="2">
+                            <input type="text" id="state" placeholder="State" required>
                         </div>
                         <div style="margin-top: 12px;">
                             <input type="text" id="zipCode" placeholder="Zip Code" required>
